fixup! Align Site Navigation left on large screen

--- a/src/css/global-header/_site-navigation-at-home.scss
+++ b/src/css/global-header/_site-navigation-at-home.scss
@@ -1,6 +1,6 @@
 // Site Navigation at Home
 .site-navigation.at-home {
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-full) {
     margin-left: $width-gap;
 
     li:last-child {
