--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -37,7 +37,7 @@
     }
   }
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-full) {
     margin-left: $width-gap;
 
     li {
